<resources>
    <string name="app_name">AnimatedApp</string>
    <string name="action_settings">Settings</string>
    <string name="food1">food1</string>
    <string name="food2">food2</string>
    <string name="food3">food3</string>
    <string name="food4">food4</string>
    <string name="grass">Grass</string>
    <string name="sky">Sky</string>
    <string name="clock">Clock</string>
    <string name="hour">Hour Hand</string>
    <string name="title_activity_welcomescreen">Healthy Lyf Cho</string>
    <string name="title_activity_weldone">Level Complete</string>
    <string name="title_activity_invisibleonclick">invisibleonclick</string>
    <string name="replaybutton">Replay</string>
    <string name="quitgamebutton">Quit</string>
    <string name="levelcomplete">Level Complete</string>
    <string name="levelcompletedialogue">completedleveldialog</string>
    <string name="menu">Goto menu</string>
</resources>
